--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,6 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://github.com/Mariela-Gonzalez478/StatisMix
 BugReports: https://github.com/Mariela-Gonzalez478/StatisMix/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
